@@ -1,0 +1,16 @@
+# $NetBSD: Makefile,v 1.1 2019/07/31 13:17:00 brook Exp $
+
+CATEGORIES=	math R
+
+MAINTAINER=	pkgsrc-users@NetBSD.org
+HOMEPAGE=	${R_HOMEPAGE_BASE}/estimability/
+COMMENT=	Tools for assessing estimability of linear predictions
+LICENSE=	gnu-gpl-v3
+
+R_PKGNAME=	estimability
+R_PKGVER=	1.3
+
+USE_LANGUAGES=	# none
+
+.include "../../math/R/Makefile.extension"
+.include "../../mk/bsd.pkg.mk"
